[package]
name = "haltic"
version = "0.1.2"
edition = "2021"
description = "A crate for cancellable services"
readme = "README.md"

homepage = "https://github.com/jbgriesner/haltic"
repository = "https://github.com/jbgriesner/haltic.git"

categories = []
keywords = ["network-programming", "rust-patterns"]

license = "MIT/Apache-2.0"

[badges]
travis-ci = {repository = "jbgriesner/haltic"}

[dependencies]
